--- a/pom.xml
+++ b/pom.xml
@@ -99,13 +99,13 @@
 	
 	    <repository>
 	      <id>nexus</id>
-	      <name>Mithun Technologies Releases Nexus Repository</name>
+	      <name>My-Release-Repo</name>
 	      <url>http://54.90.76.112:8081/repository/MY-RELEASE-REPO/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
-	      <name>Mithun Technologies Snapshot Nexus Repository </name>
+	      <name>My Snapshot Repo</name>
 	      <url>http://54.90.76.112:8081/repository/MY-SNAPSHOT-REPO/</url>
 	    </snapshotRepository>
 	    
