--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<description>Maven Web Project for Java Project</description>
 
 	<organization>
-		<name>Mithun Technologies Private Limited</name>
+		<name>Mithun Technology</name>
 		<url>http://mithuntechnologies.com/</url>
 	</organization>
 
